Modified crowd gateways

--- a/app/components/FinanceDashboard/scss/finance-body.scss
+++ b/app/components/FinanceDashboard/scss/finance-body.scss
@@ -23,7 +23,7 @@
 
     &__btn-wrap {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         width: 376px;
         margin: 0 auto;
