Fixed and updated transfer and explorer

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -50,8 +50,7 @@
     }
 
     .valid-amount {
-        color: #7ed321;
-        border-bottom: 1px solid #7ed321;
+        color: #03d99d;
         cursor: pointer;
     }
 
@@ -63,7 +62,6 @@
     }
     .has-error {
         display: inline !important;
-        border-bottom: 1px solid #f04124;
         cursor: pointer;
     }
     .floatRight {
