--- a/app/components/CrowdShop/scss/shopping-transfer.scss
+++ b/app/components/CrowdShop/scss/shopping-transfer.scss
@@ -18,8 +18,7 @@
         }
 
         .valid-amount {
-            color: #7ed321;
-            border-bottom: 1px solid #7ed321;
+            color: #03d99d;
             cursor: pointer;
         }
     }
