--- a/app/components/MainPage/scss/_all.scss
+++ b/app/components/MainPage/scss/_all.scss
@@ -9,6 +9,8 @@
 // ------------------
 @import "ms-recent-ops";
 // ------------------
+@import "../../Explorer/scss/block-hash.scss";
+// ------------------
 @import "gcwd-stats";
 // ------------------
 @import "daily-stats-view";
