--- a/app/assets/stylesheets/components/_common.scss
+++ b/app/assets/stylesheets/components/_common.scss
@@ -27,6 +27,10 @@
         color: #ffffff;
         line-height: 1.3;
         text-transform: uppercase;
+
+        &--lower-case {
+            text-transform: lowercase;
+        }
     }
 
     &__title-upper-case {
