--- a/app/components/Explorer/scss/explorer-blocks.scss
+++ b/app/components/Explorer/scss/explorer-blocks.scss
@@ -66,6 +66,10 @@
         &--large {
             font-size: 20px;
         }
+
+        &--current-supply {
+            font-size: 14px;
+        }
     }
 
     &__block-label {
